<resources>
    <string name="app_name">Quiz App</string>
    <string name="welcome">Welcome to The General Knowledge Quiz</string>
    <string name="yourName">Type your name</string>
    <string name="q1">What was the date of Victory in Europe Day?</string>
    <string name="question_1">Question 1</string>
    <string name="answer_q1_1">16 June 1944</string>
    <string name="answer_q1_2">8 May 1945</string>
    <string name="answer_q1_3">9 September 1945</string>
    <string name="question_2">Question 2</string>
    <string name="q2">What is the name of the tallest structure ever built?</string>
    <string name="answer_q2_1">Burj Khalifa</string>
    <string name="answer_q2_2">Grollo Tower</string>
    <string name="answer_q2_3">CN Tower</string>
    <string name="question_3">Question 3</string>
    <string name="q3">Which of the countries listed below is not in Asia</string>
    <string name="answer_q3_1">China</string>
    <string name="answer_q3_2">Egypt</string>
    <string name="answer_q3_3">Lebanon</string>
    <string name="answer_q3_4">Sudan</string>
    <string name="q4">What country\'s flag is this?</string>
    <string name="question_4">Question 4</string>
    <string name="answer_q4_1">Denmark</string>
    <string name="answer_q4_2">Norway</string>
    <string name="answer_q4_3">Sweden</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="congrats">Congratulations" "</string>
    <string name="scoremessagestart">!\nYour score is &#160;</string>
    <string name="scoremesaaageend">&#160; points out of&#160;</string>
    <string name="messagewrongstart">Sorry" "</string>
    <string name="messagewrongstart2">,\nYou received" "</string>
    <string name="messagewrongmid">" "points out of" "</string>
    <string name="messagewrongend">.\nTry again.</string>
    <string name="question_5">Question 5</string>
    <string name="hint_edit_q5">type your answer</string>
    <string name="q5">Constantinople is the former name of which Asian city?</string>
    <string name="answer5">istanbul</string>
</resources>
