<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/scrollView"
    tools:context="com.example.android.quizapp.MainActivity">


    <LinearLayout style="@style/mainLinearLayout">

        <!--The title-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="@dimen/welcomeTextSize" />

        <!--The username-->

        <EditText
            android:id="@+id/user_name"
            style="@style/usernameStyle" />

        <View style="@style/view">

        </View>

        <!--First Question-->

        <LinearLayout style="@style/questionLinearLayout">

            <TextView
                style="@style/wrap"
                android:layout_marginLeft="@dimen/margin8questions"
                android:layout_marginRight="@dimen/margin8questions"
                android:text="@string/question_1"
                android:textColor="@color/grey"
                android:textSize="@dimen/sizeUsername" />

            <TextView
                style="@style/wrap"
                android:layout_margin="@dimen/margin8questions"
                android:text="@string/q1"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeQuestions" />

            <RadioGroup
                android:id="@+id/radio_1"
                style="@style/wrap">

                <RadioButton
                    android:id="@+id/q1_a"
                    style="@style/wrap"
                    android:text="@string/answer_q1_1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeAnswers" />

                <RadioButton
                    android:id="@+id/q1_b"
                    style="@style/wrap"
                    android:text="@string/answer_q1_2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeAnswers" />

                <RadioButton
                    android:id="@+id/q1_c"
                    style="@style/wrap"
                    android:text="@string/answer_q1_3"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeAnswers" />

            </RadioGroup>

        </LinearLayout>

        <View style="@style/view">

        </View>

        <!--Second Question-->

        <LinearLayout style="@style/questionLinearLayout">

            <TextView
                style="@style/wrap"
                android:layout_marginLeft="@dimen/margin8questions"
                android:layout_marginRight="@dimen/margin8questions"
                android:text="@string/question_2"
                android:textColor="@color/grey"
                android:textSize="@dimen/sizeUsername" />

            <TextView
                style="@style/wrap"
                android:layout_margin="@dimen/margin8questions"
                android:text="@string/q2"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeQuestions" />

            <RadioGroup
                android:id="@+id/radio_2"
                style="@style/wrap">

                <RadioButton
                    android:id="@+id/q2_a"
                    style="@style/wrap"
                    android:text="@string/answer_q2_1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeAnswers" />

                <RadioButton
                    android:id="@+id/q2_b"
                    style="@style/wrap"
                    android:text="@string/answer_q2_2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeAnswers" />

                <RadioButton
                    android:id="@+id/q2_c"
                    style="@style/wrap"
                    android:text="@string/answer_q2_3"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeAnswers" />

            </RadioGroup>

        </LinearLayout>

        <View style="@style/view"></View>

        <!--Third Question-->

        <LinearLayout style="@style/questionLinearLayout">

            <TextView
                style="@style/wrap"
                android:layout_marginLeft="@dimen/margin8questions"
                android:layout_marginRight="@dimen/margin8questions"
                android:text="@string/question_3"
                android:textColor="@color/grey"
                android:textSize="@dimen/sizeUsername" />

            <TextView
                style="@style/wrap"
                android:layout_margin="@dimen/margin8questions"
                android:text="@string/q3"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeQuestions" />

            <CheckBox
                android:id="@+id/q3_a"
                style="@style/wrap"
                android:text="@string/answer_q3_1"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeAnswers" />

            <CheckBox
                android:id="@+id/q3_b"
                style="@style/wrap"
                android:text="@string/answer_q3_2"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeAnswers" />

            <CheckBox
                android:id="@+id/q3_c"
                style="@style/wrap"
                android:text="@string/answer_q3_3"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeAnswers" />

            <CheckBox
                android:id="@+id/q3_d"
                style="@style/wrap"
                android:text="@string/answer_q3_4"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeAnswers" />

        </LinearLayout>

        <View style="@style/view">

        </View>

        <!--Fourth Question-->

        <LinearLayout style="@style/questionLinearLayout">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin8questions"
                android:layout_marginRight="@dimen/margin8questions"
                android:text="@string/question_4"
                android:textColor="@color/grey"
                android:textSize="@dimen/sizeUsername" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin8questions"
                android:text="@string/q4"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeQuestions" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/imagemarginbottom"
                android:src="@drawable/swedishflag" />

            <RadioGroup
                android:id="@+id/radio_3"
                style="@style/wrap">

                <RadioButton
                    android:id="@+id/q4_a"
                    style="@style/wrap"
                    android:text="@string/answer_q4_1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeAnswers" />

                <RadioButton
                    android:id="@+id/q4_b"
                    style="@style/wrap"
                    android:text="@string/answer_q4_2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeAnswers" />

                <RadioButton
                    android:id="@+id/q4_c"
                    style="@style/wrap"
                    android:text="@string/answer_q4_3"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeAnswers" />

            </RadioGroup>

        </LinearLayout>

        <View style="@style/view">

        </View>

        <LinearLayout style="@style/questionLinearLayout">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin8questions"
                android:layout_marginRight="@dimen/margin8questions"
                android:text="@string/question_5"
                android:textColor="@color/grey"
                android:textSize="@dimen/sizeUsername" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin8questions"
                android:text="@string/q5"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeQuestions" />

            <EditText
                android:id="@+id/question_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin8questions"
                android:layout_marginRight="@dimen/margin8questions"
                android:hint="@string/hint_edit_q5"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeAnswers" />

        </LinearLayout>

        <View style="@style/view">

        </View>

        <!--The buttons to show the result and reset the app -->

        <LinearLayout style="@style/buttonsLayout">

            <!--submit button-->

            <Button
                android:id="@+id/reset_button"
                style="@style/buttons"
                android:onClick="resetQuiz"
                android:text="@string/reset" />

            <!--reset button-->

            <Button
                android:id="@+id/submit_button"
                style="@style/buttons"
                android:onClick="submitAnswers"
                android:text="@string/submit" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
